# RadarAnalysisTools

./: README.md
cedio/trunk/: ASDPMD.f  BLHED.f  BLKDAT.f  CDATE.c  CDATE.c-old  CEDERX.f  CEDHEAD.f  CEDREAD.f  CEDRIC_CRAY.INC  CEDRIC_WKSTN.INC  CIN.c  COUT.c  CRTHIN.f  DMPCHAR.f  DMPFLOAT.f  DMPINTGR.f  FETCHZ.f  HEADBLD.f  IMHSUM.f  README  TAPMES.f  VERSOUT.f  WRITCED.f  appendix-D.ps  ced_qwik.dec  ced_qwik.thorn  cedio.bld  cedio.links  cedrdwrt  cedrdwrt.out  cedread  cedread.out  cedread.txt  cedric.h-alpha  cedric.h-cray  cedric.h-hp  cedric.h-ibm  cedric.h-linux  cedric.h-sgi  cedric.h-solaris  (+19 more)
cedric/branches/python-repackage/: Makefile.am  Makefile.in  README  configure  configure.ac
cedric/branches/python-repackage/config/: bootstrap
cedric/branches/python-repackage/examples/ced_examp/: ced_examp-cedric.out  ced_examp.out  run_ced_examp
cedric/branches/python-repackage/examples/netcdf/: cedric_netcdf.inp  cedric_sprint.inp  cedric_stats.inp
cedric/branches/python-repackage/examples/steps/: cedric-syn2.0629  cedric-syn2.inp
cedric/branches/python-repackage/examples/steps/data/: nexrad-steps.net  nexrad-vortex.net  nexrad.net  nexrad_VCPs.txt  sprint-kgld.script
cedric/branches/python-repackage/python/: Makefile.am  Makefile.in  _cedric.pyf  cedric.pyf  read_volume.py  test_ddop.py
cedric/branches/python-repackage/python/cedric/: __init__.py  algorithms.py  file.py  plots.py
cedric/branches/python-repackage/python/doc/: Makefile  cedricapi.rst  conf.py  examples.rst  fix_f2py.py
cedric/branches/python-repackage/python/doc/_build/doctrees/: cedricapi.doctree  environment.pickle  examples.doctree  index.doctree
cedric/branches/python-repackage/python/doc/_build/html/: .buildinfo  cedricapi.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
cedric/branches/python-repackage/python/doc/_build/html/_sources/: index.txt
cedric/branches/python-repackage/source/: BNDFIL.F  BNDFIL.F90  CALUVW3d.F90  CDATE.c  CEDINIT.F  CEDQUIT.F  CEDRIC.F  CEDRIC.INC  CGETMEM.c  CHANGE.F  CIN.c  COINTRP.F  COPCIX.F  COPIX.F  COUT.c  CREATE.F  CROSS.F  CUTILS.c  DEFINE.F  DESYNR.F  DSINIT.F  DWITER.F  DWITER.F90  EQSLV.F  FETCHD.F  GETLMA.F  GLODEC.F  HMARKS.F  HSTINT.F  ICTMOD.F  IFIND.F  INIAXS.F  INTGRT3d.F90  ISST3D.F  LAPSOL.F  LAT_LON.F  LSQFIL.F  MAJMIN.F  MAXZ.F  MDV_header_routines.c  (+31 more)
cedric/branches/python-repackage/source/Sandbox/: DFCLRS.f-new
cedric/branches/python-repackage/source/include/: junk.c  mdv_field_codes.h  mdv_field_handle.h  mdv_file.h  mdv_grid.h  mdv_private.h  mdv_private_f.h  mdv_utils.h
cedric/branches/python-repackage/testdata/ddop/: runsyn
cedric/branches/python-repackage/testdata/spol/: Radx2Grid.jay  cedric-baseline.out  test_spol_header.sh
cedric/branches/python-repackage/tests/: Makefile.in  diff_cedric  test_ced_examp_cedric  test_ced_examp_gcedric  test_spol_header
cedric/cedric-repackage/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
cedric/cedric-repackage/config/: bootstrap
cedric/cedric-repackage/examples/ced_examp/: README  ced_examp-cedric.out  ced_examp.cgm  ced_examp.out  run_ced_examp  test_ced_examp
cedric/cedric-repackage/examples/steps/: cedric-spol.script
cedric/cedric-repackage/examples/steps/data/: KEAX-ppi_nexrad.out.Z  nexrad-craft.net  nexrad-ihop.net
cedric/cedric-repackage/source/: ASDPMD.F  BCKGRND.f  BLKDAT.f  BNDVAL.F  CDATE.c  CEDERX.F  CEDMDV.f  CEDRIC.F  CEDUTIL.F  CODER.f  COMCHK.f  COPCX.f  COUT.c  CRINTRP.F  DIFADV.F  DMPFLOAT.F  DSFSTK.F  DSPCOD.f  DSPSRF.F  DSPSYN.F  FAREA.F  FETCHZ.F  FILTER.F  HDUMP.f  HISTGR.f  HSTLBL.f  HSTLST.f  IABPCK.F  ICONSC.f  IFINDC.f  IMHSUM.F  INTGRT.F  KILDAT.F  LABBOX.f  LINFIT2.f  LLINTRP.F  LOCFLDID.F  LOCINT.F  MDV_field_routines.c  MY_PLCHMQ.f  (+39 more)
cedric/cedric-repackage/source/Sandbox/: rantest.f  tst_rvtopo.f
cedric/cedric-repackage/source/gbytes/: README  logic32.c
cedric/cedric-repackage/source/gcedric/: Makefile.am
cedric/cedric-repackage/source/include/: ansi.h  os_config.h  port_types.h  toolsa_macros.h  var_elev.h
cedric/cedric-repackage/testdata/spol/: Radx2Grid.ppi  cedric-baseline.out  test_spol_header.sh
cedric/cedric-repackage/tests/: Makefile.am  Makefile.in  diff_cedric  read_volume.sh  test_ced_examp_cedric  test_ced_examp_gcedric
cedric/tests/: read_volume.sh
cedric/trunk/: AIROUT.f  ASDPMD.f  BLHED.f  CEDCDF.f  CEDRIC.INC  CEDRIC.INC-32  CEDRIC.INC-64  CEDRIC.f  CIN.c  CODER.f  COMMNT.f  CONCHAR.f  COPIRX.f  CRTHIN.f  DIVZERO.f  DOSHFT.f  DSPSRF.f  EXTEND.f  FETCHZ.f  FLDSET.f  FUNCTN.f  FUNCTS.f  FUNK.f  GETNLD.f  HSTLBL.f  IGET16.f  IMHSUM.f  INTGRT.f  ISGFXY.f  LAPDRV.f  MEDHST.f  MYFRAME.f  PATCHR.f  PLANST.f  PLNFLD.f  PLOTAD.f  PLOTCH.f  PLTDRV.f  PLTHIST.f  READAIR.f  (+42 more)
grid2ps/: 181814gbvtd.ps  ALTER.f  AssignVar.f  CEDLOG.f  CEDREAD.f  CEDREAD.f.cedio  CIN.c  CRTHIN.f.cedio  Char2Int.c  IMHSUM.f  Makefile  Makefile.rh8  ReadInp.c  ReadVar.f  SAVEARRY.f  TextRead.f  WRITCED.f  WritePS.f  cedric.h  common1.h  common2.h  common3.h  contour.f  driver_read.f  driver_write.f  inp1.bk  main.f  structure.h
grid2ps/old/: ASDPMD.f  AssignVar.f.save  BLHED.f  CEDERX.f  CEDREAD.f  CEDUTIL.f  CIN.c  COUT.c  CRTHIN.f  FETCHZ.f  LOCFLDID.f  Makefile  Makefile.g77  Makefile.halfassncarg  Makefile.save  PLACEPLANE.f  SAVEARRY.f  SHIRBL.f  TextRead.f  UserSub.f  WritePS.f  bcopyswap.c  c.h  cedric.h  common1.h  common2.h  contour.f  inp1  logic32.c  main.f  test.f  test.h  testit.f
grid2ps/test/: failure  inp1  rita_0921_z1.ps
ppi/trunk/: ABSVAL.f  ANLYTIC.f  ARC.f  ASDPMD.f  ATTEN.f  AVRAGE.f  BSCN.f  CEILING.f  COLTAB.f  COMPLX_CHAR.f  CONFILL1.f  CONLEV.f  COORD.f  CORRNG.f  DELETE.f  DIPS.f  DISP.f  DISP_sh.f  DMPCHAR.f  DOREC.f  ELTOPO.f  ETA.f  FFREC.f  FIELD.f  FLDIDUF.f  FUNC.f  FXSWATH.f  G.f  GETTIME.f  GRIDACT.f  GRID_BOX.f  HDR.f  HTOPO.f  IFNOBAD.f  INITAREA.f  INSIDE.f  LABCOL_NON.f  LABEL.f  LABEL1.f  LABEL2.f  (+124 more)
sprint/trunk/: AIRCHK.f  BEAMIN.f  CDATE.c  CEDUTIL.f  CHKMSG.f  COMBIN.f  COUT.c  CRTOUT.f  CRTSET.f  CRTTCP.f  DOFILT.f  (+63 more)
(+850 files in other folders)
