# -*- makefile -*-
#

FSRCS = \
 CEDRIC.F SYMINT.F VERSOUT.F CEDUTIL.F \
 LOCATE.F CEDERX.F FLUSH_STDOUT.F SETBAD.F CHANGE.F \
 COMMNT.F INTGRT.F CREATE.F FILTER.F FIXIDS.F \
 READVL.F PATCHR.F \
 STATS.F STATZI.F STINT.F \
 FUNCTN.F FUNCTS.F DSFSTK.F \
 WINDFD.F TRANSF.F \
 DIGITP.F REMAP.F SAMPLR.F SHFTER.F SYNDRV.F DESYNR.F UNFOLD.F \
 WINDIJ.F WRITVL.F CROSS.F REGRES.F LAPDRV.F \
 RLXDRV.F MS2DRV.F COORD.F FLAT.F READAIR.F READSTA.F LAT_LON.F \
 VADDRV.F SAVVAD.F GETNLD.F GETLMA.F \
 COPCX.F COPRX.F COPIX.F COPIRX.F COPCIX.F \
 CONCHAR.F \
 SELDEV.F IFINDC.F IADFLD.F LOCFLDID.F LOCINT.F LOCFLD.F \
 FETCHD.F FETCHZ.F PLACED.F \
 LL2XY.F LL2XYDRV.F LLINTRP.F XY2LLDRV.F XY2LL.F \
 CONFLD.F PCONVG.F SHOEDF.F SHOEDW.F EXTEND.F \
 SETAXS.F \
 GET3D.F PUT3D.F FILL3D.F \
 DOFILT.F T5FLTR.F \
 NEWHED.F UPDHED.F CRTMAP.F DSINIT.F RESHUF.F SKIPP.F IDCMPR.F \
 COMCHK.F WINSET.F FLDSET.F SETVOL.F IMHSUM.F \
 TAPMES.F  CEDCDF.F  CRTHIN.F  FLDNAMOUT.F  PUTD.F GETD.F  TRPCO.F  LSQFIL.F \
 SHIFTIT.F  SHILBL.F  SHIRBL.F  IFIND.F  ALTER.F  ASDPMD.F  REGCAL.F \
 REGINT.F  REGRZI.F BLHED.F DWITER.F VADCORD.F VAD.F VADRINGS.F \
 PLANST.F PLNFLD.F LINFIT2.F LSFILW.F LSTSQR.F SETDCD.F GLODEC.F \
 BNDFIL.F BNDVAL.F UNPAUT.F STRID.F RITER.F NEXACT.F ISUFLD.F \
 CRINTRP.F EQSLV.F IFINOT.F DUMMY.F CEDLOG.F GRIDAIR.F CEDMDV.F \
 RELXUV.F PPI_IFIND.F PPI_MAJMIN.F USTOPO.F RANF.F SOUND.F DIVZERO.F \
 ROVECT.F RVTOPO.F COINTRP.F ICONSC.F AIRACCUM.F AIROUT.F LAPSOL.F \
 CORCAL.F BLDDES.F REDHED.F UNFSLP.F DIFADV.F DOSHFT.F DMPCHAR.F \
 UNPFOR.F SYNNER.F DSPSYN.F IDSYND.F THERMO.F CALUVW.F IABPCK.F \
 IGET16.F \
 $(KARDINSRCS)

KARDINSRCS = KARDIN.F EXPAND.F VALUE.F DEFINE.F RDKARD.F 

GBYTESSRCS = gbytes/gbytes.f gbytes/sbytes.f gbytes/i1mach.f gbytes/logic32.c

MDVSRCS = MDV_field_routines.c MDV_header_routines.c mdv_utils.c mdv_write.c

NGSRCS = \
 BCKGRND.F BLKDAT.F CODER.F COLRAM.F CONTHALF.F CORR.F \
 DATASND.F DFCLRS.F DMPFLOAT.F DMPINTGR.F DSP3D.F \
 DSPCOD.F DSPSRF.F FAREA.F FEETCL.F FORADV.F \
 FUNK.F genmap.F GETLEN.F GETSND.F GUIPROC.F HDUMP.F HISTGR.F \
 HMARKS.F HSTGRM.F HSTINT.F HSTLBL.F HSTLST.F ICTMOD.F ISGFXY.F \
 ISOSRF.F ISST3D.F IVBGEN.F KILDAT.F KNTOCR.F LABBOX.F LBFILL.F \
 MAJMIN.F MAXZ.F MEDHST.F MINMAX.F MYFRAME.F MY_PLCHMQ.F OVSETP.F \
 PLOTAD.F PLOTCH.F PLTACT.F PLTDRV.F PLTHIST.F PLTLMA.F PLTNLD.F \
 PLTSTA.F PLTVAD.F RCPU_XY.F REMINT.F REMPOS.F RGINI.F SCLCAL.F \
 SCTDSP.F SETCNT.F SETCOL.F SETLIN.F SETPAT.F SHADAM.F SIMPLDIG.F \
 SMTH1D.F SRFACE.F SRFGK.F STPDRV.F STPLOT.F STPOBD.F STRMLN.F \
 TSTCOL.F VECDRW.F VECDSP.F

CSRCS = \
 CGETMEM.c CUTILS.c CDATE.c COUT.c CIN.c topo.c cdf_utils.c 

SRCS = $(FSRCS) $(CSRCS) $(NGSRCS) $(MDVSRCS) $(GBYTESSRCS)

bin_PROGRAMS = cedric
cedric_SOURCES = $(SRCS)

# LDR	= gfortran -static-libgfortran
# LDR	= gfortran
XLIBS	= -lX11 -lXext -lpng -lz

# roo:
NG_LIBS	= -L/opt/local/ncarg-5.2.1/lib -lncarg -lncarg_gks -lncarg_ras -lncarg_c

# shiraz:
NG_LIBS	= -L/opt/local/lib -lncarg -lncarg_gks -lncarg_ras -lncarg_c

DEFINES = -DCEDRIC_USE_NCARG=1

DEFINES = -DCEDRIC_USE_NCARG=0
NGSRCS =
NG_LIBS =

HDFLIBS = -lhdf5 -lhdf5_hl -lz
CF_LIBS	= -lnetcdf -lnetcdff -ludunits2 $(HDFLIBS)

#
# FORTRAN include does not look in /usr/include by default, so it must be
# specified if that is where netcdf.inc is located.
#
FINCLUDES = -I/usr/include
AM_FFLAGS = -g -O0 -std=legacy $(DEFINES) -fno-range-check \
          -fsecond-underscore $(FINCLUDES)
AM_CFLAGS = -g -O0 $(DEFINES)
AM_LDFLAGS =

LIBS = $(NG_LIBS) $(CF_LIBS) $(XLIBS)

