# -*- makefile -*-
#

if MAKE_WITH_NCARG
bin_PROGRAMS = cedric gcedric
noinst_LIBRARIES = libcedric.a libgcedric.a
else
bin_PROGRAMS = cedric
noinst_LIBRARIES = libcedric.a
endif

FSRCS = \
 SYMINT.F VERSOUT.F CEDUTIL.F \
 LOCATE.F FLUSH_STDOUT.F SETBAD.F CHANGE.F \
 COMMNT.F CREATE.F FILTER.F FIXIDS.F \
 READVL.F PATCHR.F \
 STATZI.F STINT.F \
 FUNCTN.F FUNCTS.F DSFSTK.F \
 WINDFD.F TRANSF.F \
 DIGITP.F REMAP.F SAMPLR.F SHFTER.F \
 SYNDRV.F DESYNR.F UNFOLD.F \
 WINDIJ.F WRITVL.F CROSS.F REGRES.F LAPDRV.F \
 RLXDRV.F MS2DRV.F COORD.F FLAT.F \
 READAIR.F READSTA.F LAT_LON.F \
 VADDRV.F SAVVAD.F GETNLD.F GETLMA.F \
 COPCX.F COPRX.F COPIX.F COPIRX.F COPCIX.F \
 CONCHAR.F \
 SELDEV.F IFINDC.F IADFLD.F LOCFLDID.F \
 LOCINT.F LOCFLD.F \
 FETCHD.F FETCHZ.F PLACED.F \
 LL2XY.F LL2XYDRV.F LLINTRP.F XY2LLDRV.F XY2LL.F \
 CONFLD.F SHOEDF.F SHOEDW.F EXTEND.F \
 SETAXS.F \
 GET3D.F PUT3D.F FILL3D.F \
 DOFILT.F T5FLTR.F \
 NEWHED.F UPDHED.F CRTMAP.F \
 DSINIT.F RESHUF.F SKIPP.F IDCMPR.F \
 COMCHK.F WINSET.F FLDSET.F SETVOL.F IMHSUM.F \
 TAPMES.F CEDCDF.F CRTHIN.F FLDNAMOUT.F \
 PUTD.F GETD.F  TRPCO.F  LSQFIL.F \
 SHIFTIT.F SHILBL.F SHIRBL.F IFIND.F \
 ALTER.F ASDPMD.F REGCAL.F \
 REGINT.F REGRZI.F BLHED.F \
 VADCORD.F VAD.F VADRINGS.F \
 PLANST.F PLNFLD.F LINFIT2.F \
 LSFILW.F LSTSQR.F SETDCD.F GLODEC.F \
 BNDVAL.F UNPAUT.F STRID.F \
 RITER.F NEXACT.F ISUFLD.F \
 CRINTRP.F EQSLV.F IFINOT.F DUMMY.F \
 CEDLOG.F GRIDAIR.F CEDMDV.F \
 RELXUV.F PPI_IFIND.F PPI_MAJMIN.F \
 USTOPO.F RANF.F SOUND.F DIVZERO.F \
 ROVECT.F RVTOPO.F COINTRP.F ICONSC.F \
 AIRACCUM.F AIROUT.F LAPSOL.F \
 CORCAL.F BLDDES.F REDHED.F UNFSLP.F \
 DIFADV.F DOSHFT.F DMPCHAR.F \
 UNPFOR.F SYNNER.F DSPSYN.F IDSYND.F \
 THERMO.F CALUVW.F IABPCK.F \
 IGET16.F EXPAND.F VALUE.F DEFINE.F RDKARD.F \
 INTGRT.F $(SRCS90)

SRCS90 = BNDFIL.F90 DWITER.F90 ms3d.f90 INTGRT3d.F90 PCONVG.F90 CALUVW3d.F90

# These modules depend on the CEDRIC_USE_NCARG macro.
MAINSRCS = CEDERX.F KARDIN.F STATS.F 

GBYTESSRCS = \
 gbytes/gbytes.f \
 gbytes/sbytes.f \
 gbytes/i1mach.f \
 gbytes/logic32.c

MDVSRCS = MDV_field_routines.c \
 MDV_header_routines.c mdv_utils.c mdv_write.c

CSRCS = \
 CGETMEM.c CUTILS.c CDATE.c COUT.c CIN.c \
 topo.c cdf_utils.c



NGSRCS = \
 BCKGRND.F BLKDAT.F CODER.F \
 COLRAM.F CONTHALF.F CORR.F \
 DATASND.F DFCLRS.F DMPFLOAT.F \
 DMPINTGR.F DSP3D.F \
 DSPCOD.F DSPSRF.F FAREA.F FEETCL.F FORADV.F \
 FUNK.F genmap.F GETLEN.F GETSND.F \
 GUIPROC.F HDUMP.F HISTGR.F \
 HMARKS.F HSTGRM.F HSTINT.F HSTLBL.F \
 HSTLST.F ICTMOD.F ISGFXY.F \
 ISOSRF.F ISST3D.F IVBGEN.F \
 KILDAT.F KNTOCR.F LABBOX.F LBFILL.F \
 MAJMIN.F MAXZ.F MEDHST.F \
 MINMAX.F MYFRAME.F MY_PLCHMQ.F OVSETP.F \
 PLOTAD.F PLOTCH.F PLTACT.F \
 PLTDRV.F PLTHIST.F PLTLMA.F PLTNLD.F \
 PLTSTA.F PLTVAD.F RCPU_XY.F REMINT.F \
 REMPOS.F RGINI.F SCLCAL.F \
 SCTDSP.F SETCNT.F SETCOL.F \
 SETLIN.F SETPAT.F SHADAM.F SIMPLDIG.F \
 SMTH1D.F SRFACE.F SRFGK.F \
 STPDRV.F STPLOT.F STPOBD.F STRMLN.F \
 TSTCOL.F VECDRW.F VECDSP.F

#
# FORTRAN include does not look in /usr/include by default, so it is always
# added to the include path in case that is where netcdf.inc is located.
# If NETCDFINCS has been specified, then that takes precedence.
#
# -fPIC is used to generate relocatable modules which can be linked by f2py
# into a python module shared object.

# -fno-second-underscore matches the f2py setting, so FORTRAN modules that
# it builds will link with the modules in libcedric.
#
AM_FFLAGS = -g -O2 -fPIC $(DEFINES) -fno-range-check \
            -fno-second-underscore $(NETCDFINCS) -I/usr/include
AM_FCFLAGS = $(AM_FFLAGS)
AM_CFLAGS = -g -O2 -fPIC $(DEFINES) $(NETCDFINCS)
AM_LDFLAGS =

libcedric_a_SOURCES = $(FSRCS) $(CSRCS) $(MDVSRCS) $(GBYTESSRCS) $(MAINSRCS)

cedric_SOURCES = CEDRIC.F
cedric_FFLAGS = -DCEDRIC_USE_NCARG=0 $(AM_FFLAGS)
cedric_LDADD = $(NETCDFLIBS) libcedric.a

if MAKE_WITH_NCARG
libgcedric_a_SOURCES = $(NGSRCS)
gcedric_SOURCES = CEDRIC.F $(MAINSRCS)
gcedric_FFLAGS = -DCEDRIC_USE_NCARG=1 $(AM_FFLAGS) $(NCARGINCS)
gcedric_LDADD = libcedric.a libgcedric.a libcedric.a $(NCARGLIBS) $(XLIBS) $(NETCDFLIBS)
endif


# Create a python module from the CEDRIC library sources and specify the
# python entry points.

# pycedric:
# 	f2py -m cedric
